# ExampleExternalProj

./: CMakeLists.txt  README.md  tutorial.cpp
tutorial_lib/: CMakeLists.txt
tutorial_lib/src/: willFooSthForMe.cpp
